[Freestyler] Fix spinner causing flickering for summary element
Fixed: 376384398
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5973209
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/ui/components/spinners/spinner.css
+++ b/front_end/ui/components/spinners/spinner.css
@@ -5,6 +5,7 @@
  */
 
 :host {
+  overflow: hidden;
   width: var(--sys-size-7);
   height: var(--sys-size-7);
   display: inline-block;
